@@ -2,7 +2,6 @@ use strict;
 use warnings;
 use Test::More tests => 5;
 use FindBin;
-use Data::Dump qw(dump);
 
 use lib ("$FindBin::Bin/lib", "$FindBin::Bin/../lib");
 use Test::Rest;
